package grpc

import (
	"context"
	"fmt"
	"time"

	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
)

// ReviewService implements the gRPC ReviewService
type ReviewService struct {
	// TODO: Add dependencies like repository interfaces
}

// NewReviewService creates a new ReviewService instance
func NewReviewService() *ReviewService {
	return &ReviewService{}
}

// Temporary structs until protobuf generates them
type Review struct {
	ID            string
	SpotID        string
	UserID        string
	Rating        int32
	Comment       string
	RatingAspects map[string]int32
	CreatedAt     time.Time
	UpdatedAt     time.Time
}

type CreateReviewRequest struct {
	SpotID        string
	Rating        int32
	Comment       string
	RatingAspects map[string]int32
}

type CreateReviewResponse struct {
	Review *Review
}

type GetSpotReviewsRequest struct {
	SpotID     string
	Pagination *PaginationRequest
}

type ReviewStatistics struct {
	AverageRating      float64
	TotalCount         int32
	RatingDistribution map[int32]int32
}

type GetSpotReviewsResponse struct {
	Reviews    []*Review
	Pagination *PaginationResponse
	Statistics *ReviewStatistics
}

type GetUserReviewsRequest struct {
	UserID     string
	Pagination *PaginationRequest
}

type GetUserReviewsResponse struct {
	Reviews    []*Review
	Pagination *PaginationResponse
}

// CreateReview creates a new review
func (s *ReviewService) CreateReview(ctx context.Context, req *CreateReviewRequest) (*CreateReviewResponse, error) {
	// Validate request
	if req.SpotID == "" {
		return nil, status.Error(codes.InvalidArgument, "spot_id is required")
	}
	if req.Rating < 1 || req.Rating > 5 {
		return nil, status.Error(codes.InvalidArgument, "rating must be between 1 and 5")
	}

	// TODO: Extract user ID from context
	// TODO: Implement actual business logic using domain services
	// For now, return dummy data
	review := &Review{
		ID:            fmt.Sprintf("review_%d", time.Now().Unix()),
		SpotID:        req.SpotID,
		UserID:        "user_123", // TODO: Get from context
		Rating:        req.Rating,
		Comment:       req.Comment,
		RatingAspects: req.RatingAspects,
		CreatedAt:     time.Now(),
		UpdatedAt:     time.Now(),
	}

	return &CreateReviewResponse{Review: review}, nil
}

// GetSpotReviews retrieves reviews for a specific spot
func (s *ReviewService) GetSpotReviews(ctx context.Context, req *GetSpotReviewsRequest) (*GetSpotReviewsResponse, error) {
	if req.SpotID == "" {
		return nil, status.Error(codes.InvalidArgument, "spot_id is required")
	}

	// TODO: Implement actual retrieval logic
	// For now, return dummy data
	review := &Review{
		ID:        "review_1",
		SpotID:    req.SpotID,
		UserID:    "user_123",
		Rating:    5,
		Comment:   "Great place! Highly recommended.",
		CreatedAt: time.Now().Add(-2 * time.Hour),
		UpdatedAt: time.Now().Add(-2 * time.Hour),
	}

	pagination := &PaginationResponse{
		TotalCount: 1,
		Page:       1,
		PageSize:   20,
		TotalPages: 1,
	}
	if req.Pagination != nil {
		pagination.Page = req.Pagination.Page
		pagination.PageSize = req.Pagination.PageSize
	}

	statistics := &ReviewStatistics{
		AverageRating: 4.5,
		TotalCount:    1,
		RatingDistribution: map[int32]int32{
			5: 1,
		},
	}

	return &GetSpotReviewsResponse{
		Reviews:    []*Review{review},
		Pagination: pagination,
		Statistics: statistics,
	}, nil
}

// GetUserReviews retrieves reviews by a specific user
func (s *ReviewService) GetUserReviews(ctx context.Context, req *GetUserReviewsRequest) (*GetUserReviewsResponse, error) {
	if req.UserID == "" {
		return nil, status.Error(codes.InvalidArgument, "user_id is required")
	}

	// TODO: Implement actual retrieval logic
	// For now, return dummy data
	review := &Review{
		ID:        "review_user_1",
		SpotID:    "spot_1",
		UserID:    req.UserID,
		Rating:    4,
		Comment:   "Nice atmosphere and good coffee.",
		CreatedAt: time.Now().Add(-5 * time.Hour),
		UpdatedAt: time.Now().Add(-5 * time.Hour),
	}

	pagination := &PaginationResponse{
		TotalCount: 1,
		Page:       1,
		PageSize:   20,
		TotalPages: 1,
	}
	if req.Pagination != nil {
		pagination.Page = req.Pagination.Page
		pagination.PageSize = req.Pagination.PageSize
	}

	return &GetUserReviewsResponse{
		Reviews:    []*Review{review},
		Pagination: pagination,
	}, nil
}